2006-08-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/wcstombs.cxx (wcstombs): Follow Single Unix Spec
	and if string is NULL, return chars that would have been
	returned.

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/i18nmb.c (main): Really silence the warnings.

2004-02-17  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/i18n.cdl: Add newlib style ctype implementation.
	CYGSEM_LIBC_I18N_PER_THREAD_MB can be inactive when no kernel.
	* include/newlibctype.h: New file.
	* src/newlibctype.cxx: New file.
	* src/ctype.cxx: Don't define functions if newlib style ctype
	chosen instead.

	* src/wctomb.cxx (wctomb): Use correct thread data type.
	* src/mbtowc.cxx (mbtowc): Ditto.
	* src/mblen.cxx (mblen): Ditto.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/i18n.cdl: Fix doc link.

2001-06-28  Jesper Skov  <jskov@redhat.com>

	* tests/i18nmb.c: fix warning.

2001-06-08  Jonathan Larmour  <jlarmour@redhat.com>

	* src/mbtowc_jp.cxx (__mbtowc_jp): Fix nasty bug for mblen(NULL, x);

	Some other cleanups across the board to the below changes before
	checking in.

2001-06-08  Jeff Johnston  <jjohnstn@redhat.com>

	* cdl/i18n.cdl: Added implements CYGINT_ISO_STDLIB_MULTIBYTE. 
	(CYGPKG_LIBC_I18N_LOCALES): New component
	encompassing supported locales.
	(CYGFUN_LIBC_I18N_LOCALE_C_JIS): New configuration
	item to support the new "C-JIS" C/Japanese locale.  Option defines
	CYGINT_LIBC_I18N_MB_REQUIRED.
	(CYGFUN_LIBC_I18N_LOCALE_C_SJIS): Similar except it is "C-SJIS" locale.
	(CYGFUN_LIBC_I18N_LOCALE_C_EUCJP): Ditto except it is "C-EUCJP" locale.
	(CYGSEM_LIBC_I18N_PER_THREAD_MB): New option that determines
	if multibyte functions will keep state data per thread or not.
	(CYGNUM_LIBC_I18N_MAX_LOCALE_NAME_SIZE): Changed legal_values and
	default_value to be dependent on whether the Japanese locales
	were supported or not.
	(CYGPKG_LIBC_I18N_TESTS): Add multibyte test.
	* src/locale.cxx: Moved Cyg_libc_locale_t to internal.h.